# fast-api-starter-repo

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  run-ui.txt
app/: config.py  models.py  pipeline.py
app/prompts/: assistant.py  pipeline.py
app/routers/: ask.py  assignees.py  chat.py  chat_local.py  pipeline.py  structured.py  tasks.py
app/schemas/: chat.py
app/services/: hosted_llm.py  ollama.py
checkpoint-3-llm-pipeline/: README.md
checkpoint-3-llm-pipeline/app/: config.py  llm.py  main.py  models.py  pipeline.py
checkpoint-3-llm-pipeline/app/prompts/: assistant.py  classify.py  few_shot.py  sentiment.py  summarize.py
checkpoint-3-llm-pipeline/app/routers/: ask.py  pipeline.py  structured.py
docs/: API.md  DEBUGGING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  GIT.md  GLOSSARY.md  HOW-IT-WORKS.md  PROJECT-STRUCTURE.md  TESTING.md  TROUBLESHOOTING.md
ui/: app.js  index.html  styles.css
